--- a/gr0ssSysTools/gr0ssSysTools.csproj
+++ b/gr0ssSysTools/gr0ssSysTools.csproj
@@ -37,6 +37,10 @@
       <HintPath>..\packages\GlobalHotKey.1.1.0\lib\GlobalHotKey.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.1-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -71,9 +75,15 @@
     <Compile Include="Edit.Designer.cs">
       <DependentUpon>Edit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Files\Environments.cs" />
+    <Compile Include="Files\General.cs" />
+    <Compile Include="Files\RegistryKey.cs" />
+    <Compile Include="Files\Tools.cs" />
+    <Compile Include="FileUtils\Constants.cs" />
     <Compile Include="FileUtils\FileStructs.cs" />
     <Compile Include="FileUtils\GeneralUtils.cs" />
     <Compile Include="FileUtils\MiscUtils.cs" />
+    <Compile Include="FileUtils\RegistryKeyUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +92,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Utils\BitmapHolder.cs" />
     <Compile Include="Utils\ColorComboBox.cs">
       <SubType>Component</SubType>
@@ -90,7 +101,7 @@
     <Compile Include="FileUtils\EnvironmentUtils.cs" />
     <Compile Include="Utils\IconHolder.cs" />
     <Compile Include="Utils\ImageStructs.cs" />
-    <Compile Include="Utils\RegistryKeyUtils.cs" />
+    <Compile Include="Utils\RegistryKeyMethods.cs" />
     <Compile Include="Utils\RegistryMonitor.cs" />
     <Compile Include="FileUtils\ToolsUtils.cs" />
     <EmbeddedResource Include="AddName.resx">
