Added GlobalHotkey to General Settings
This will be used in the future to let the user edit the programs global
hotkey to their liking.

--- a/gr0ssSysTools/gr0ssSysTools.csproj
+++ b/gr0ssSysTools/gr0ssSysTools.csproj
@@ -97,6 +97,8 @@
     <Compile Include="AddRegistryKey.Designer.cs">
       <DependentUpon>AddRegistryKey.cs</DependentUpon>
     </Compile>
+    <Compile Include="Files\LoadedGlobalHotkey.cs" />
+    <Compile Include="FileUtils\GlobalHotkeyUtils.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
