--- a/gr0ssSysTools/gr0ssSysTools.csproj
+++ b/gr0ssSysTools/gr0ssSysTools.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Files\LoadedGlobalHotkey.cs" />
     <Compile Include="FileUtils\GlobalHotkeyUtils.cs" />
     <Compile Include="Parsers\ColorParser.cs" />
+    <Compile Include="Parsers\FontParser.cs" />
     <Compile Include="Parsers\GlobalHotkeyParser.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
