Added Tools Directory Lookup

--- a/gr0ssSysTools/gr0ssSysTools.csproj
+++ b/gr0ssSysTools/gr0ssSysTools.csproj
@@ -210,6 +210,21 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder-add.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder-add32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder-add16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\folder-search16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
