--- a/gr0ssSysTools/gr0ssSysTools.csproj
+++ b/gr0ssSysTools/gr0ssSysTools.csproj
@@ -75,7 +75,6 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -159,7 +158,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="gr0ssSysTools_TemporaryKey.pfx" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -224,6 +222,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\folder-search16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Open-Folder.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Open-Folder16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Open-Folder32.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
