--- a/RegistryMonitor/RegistryMonitor.csproj
+++ b/RegistryMonitor/RegistryMonitor.csproj
@@ -140,6 +140,7 @@
     <Compile Include="FileUtils\EnvironmentUtils.cs" />
     <Compile Include="Utils\IconHolder.cs" />
     <Compile Include="Utils\ImageStructs.cs" />
+    <Compile Include="Utils\ListboxUtils.cs" />
     <Compile Include="Utils\OpenFileDialogUtils.cs" />
     <Compile Include="Utils\RegistryMonitor.cs" />
     <Compile Include="FileUtils\ToolsUtils.cs" />
