--- a/RegistryMonitor/App.config
+++ b/RegistryMonitor/App.config
@@ -1,6 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="exceptionless" type="Exceptionless.ExceptionlessSection, Exceptionless.Extras" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <exceptionless apiKey="wHJkKGvKT8ZE8R5Hik781ABS5fhXgzIMGXAxm1ls" />
 </configuration>
