--- a/RegistryMonitor/packages.config
+++ b/RegistryMonitor/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Exceptionless.Portable" version="3.2.1424" targetFramework="net452" />
+  <package id="Exceptionless.Windows" version="3.2.1424" targetFramework="net452" />
   <package id="GlobalHotKey" version="1.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
 </packages>
