--- a/RegistryMonitor/App.config
+++ b/RegistryMonitor/App.config
@@ -6,5 +6,5 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <exceptionless apiKey="" />
+  <exceptionless apiKey="wHJkKGvKT8ZE8R5Hik781ABS5fhXgzIMGXAxm1ls" />
 </configuration>
