--- a/RegistryMonitor/packages.config
+++ b/RegistryMonitor/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Exceptionless.Portable" version="3.3.1575" targetFramework="net452" />
-  <package id="Exceptionless.Windows" version="3.3.1575" targetFramework="net452" />
+  <package id="Exceptionless.Portable" version="3.4.1662" targetFramework="net452" />
+  <package id="Exceptionless.Windows" version="3.4.1662" targetFramework="net452" />
   <package id="GlobalHotKey" version="1.1.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="8.0.1-beta3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
